_archive/content-services/3.4/concepts/ch-install.md
---
author: [Alfresco Documentation, Alfresco Documentation]
audience: 
category: [Installation, Alfresco Server]
keyword: [typical, installation, install]
---

# Installing Alfresco

This section provides information for manually installing Alfresco.

-   **[Production environment checklist](../concepts/configuration-checklist.md)**  
This section provides a check list for validating the architecture on which Alfresco will run and also for validating the production environment prior to installing Alfresco.
-   **[Installation files](../concepts/what-to-install-b3.md)**  
There are a number of different installation files available to you, each of which you can choose depending on what is already installed on your system.
-   **[Software requirements](../concepts/prereq-install.md)**  
The following table lists the required software that must be on your system for manually installing Alfresco.
-   **[Installing Alfresco on Tomcat](../tasks/alfv3-tomcat-install.md)**  
For more complex Alfresco installations or if you wish to use an existing Tomcat application server, you can use the Web Archive \(WAR\) bundle to install on any platform. For this type of installation, you must ensure that the required software is installed on the machine.
-   **[Installing Alfresco on JBoss](../tasks/alfv3-jboss-install.md)**  
You can install and deploy the Alfresco WAR on the JBoss application server.
-   **[Installing Alfresco on WebLogic](../tasks/war-weblogic10-install.md)**  
This section describes how to install Alfresco as an Enterprise ARchive format \(EAR\) into Oracle WebLogic.
-   **[Installing Alfresco on WebSphere](../tasks/alf-websphere-install.md)**  
This section describes how to install Alfresco on WebSphere 7.0. These instructions are valid for installing on Windows 2008.
-   **[Installing a new license](../tasks/license-install.md)**  
The Alfresco license file must be installed before you can use Alfresco.

**Parent topic:**[Installing](../concepts/master-ch-install.md)

**Related information**  


[Installing Alfresco on Linux](../tasks/simpleinstall-bitrock-lin.md)

[Installing Alfresco on Windows](../tasks/simpleinstall-bitrock-win.md)

