_archive/content-services/5.0/concepts/ch-install.md
---
author: [Alfresco Documentation, Alfresco Documentation]
audience: 
---

# Installing Alfresco Enterprise

This section provides information for manually installing Alfresco Enterprise.

-   **[Software requirements](../concepts/prereq-install.md)**  
The following table lists the required software that must be on your system for manually installing Alfresco.
-   **[Production environment checklist](../concepts/configuration-checklist.md)**  
Use this check list to validate the architecture on which Alfresco will run and also for validating the production environment prior to installing Alfresco.
-   **[Alfresco installation files](../concepts/download-enterprise.md)**  
There are a number of different installation files available to you, each of which you can choose depending on what is already installed on your system.
-   **[Installing Alfresco on Tomcat](../tasks/alf-tomcat-install.md)**  
For more complex Alfresco installations or if you wish to use an existing Tomcat application server, you can use the Web Archive \(WAR\) bundle to install Alfresco on any platform. For this type of installation, you must ensure that the required software is installed on the machine.
-   **[Installing Alfresco on JBoss](../tasks/alf-jboss-install.md)**  
You can install and deploy the Alfresco WAR on the JBoss application server.
-   **[Installing Alfresco on WebLogic](../tasks/alf-weblogic-install.md)**  
Use this information to install Alfresco as an Enterprise ARchive format \(EAR\) into Oracle WebLogic.
-   **[Installing Alfresco on WebSphere](../tasks/alf-websphere-install.md)**  
Use this information to install Alfresco on WebSphere 8.5.5.
-   **[Removing unused applications](../concepts/remove-apps-install.md)**  
When installing Alfresco, an important part of the configuration process is the removal of any unused applications. This topic describes the applications that you may wish to remove from your Alfresco installation and how to remove them.
-   **[Installing an Alfresco Module Package](../tasks/amp-install.md)**  
An Alfresco Module Package \(AMP\) is a bundle of code, content model, content, and the directory structure that is used to distribute additional functionality for Alfresco. Use the Module Management Tool \(MMT\) to install and manage AMP files. You can install an AMP in an Alfresco WAR using the MMT, or by using the `apply_amps` tool.
-   **[Language support](../concepts/language-support.md)**  
The Alfresco interface is supported for use with a number of languages that have been through an Engineering quality assurance \(QA\) and linguistic testing cycle.

**Parent topic:**[Installing](../concepts/master-ch-install.md)

**Related information**  


[Installing Alfresco Enterprise on Linux](../tasks/simpleinstall-enterprise-lin.md)

[Installing Alfresco Enterprise on Windows](../tasks/simpleinstall-enterprise-win.md)

